Fix layout issue on portfolio grid.

--- a/src/components/PortfolioGrid.scss
+++ b/src/components/PortfolioGrid.scss
@@ -2,7 +2,9 @@
 
 .portfolio {
   .portfolio-item {
-    max-width: 380px;
+    padding: 15px;
+    max-width: 360px;
+    height: 400px;
     margin: 0 auto;
 
     .preview {
